--- a/App.xaml
+++ b/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="archive2.App"
+﻿<Application x:Class="pmis.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:archive2"
+             xmlns:local="clr-namespace:pmis"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
          
