--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,18 +1,18 @@
-﻿<Window x:Class="archive2.MainWindow"
+﻿<Window x:Class="pmis.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:archive2"
+        xmlns:local="clr-namespace:pmis"
         mc:Ignorable="d"
         Title="MainWindow" Height="622" Width="1063" Closing="Window_Closing">
     <Grid>
         <TabControl x:Name="tabControl" Margin="10,31,10,10">
             <TabItem Header="Register">
                 <Grid Background="#FFE5E5E5">
-                    <DataGrid x:Name="dataGrid1" Margin="0,124,0,0">
+                    <DataGrid x:Name="registerDataGridView" Margin="0,124,0,0">
                         <DataGrid.Columns>
-                            <DataGridCheckBoxColumn Header="Document Number"/>
+                            <DataGridCheckBoxColumn Header="Document Number" Binding="{Binding docno}"/>
                             <DataGridCheckBoxColumn Binding="{x:Null}" ClipboardContentBinding="{x:Null}" Header="Title"/>
                             <DataGridCheckBoxColumn Binding="{x:Null}" ClipboardContentBinding="{x:Null}" Header="Revision"/>
                             <DataGridCheckBoxColumn Binding="{x:Null}" ClipboardContentBinding="{x:Null}" Header="Version"/>
@@ -51,7 +51,7 @@
             </TabItem>
             <TabItem Header="Detail">
                 <Grid Background="#FFE5E5E5">
-                    <GroupBox x:Name="groupBox" Header="GroupBox" Margin="10,10,10,0" VerticalAlignment="Top" Height="222">
+                    <GroupBox x:Name="groupBox" Header="Data" Margin="10,10,10,0" VerticalAlignment="Top" Height="222">
                         <Grid>
                             <Label x:Name="label1" Content="Number" HorizontalAlignment="Right" Margin="0,9,886,0" VerticalAlignment="Top" Foreground="#FF727272"/>
                             <Label x:Name="label1_Copy" Content="Title" HorizontalAlignment="Right" Margin="0,40,886,0" VerticalAlignment="Top" Foreground="#FF727272"/>
@@ -61,30 +61,52 @@
                             <Label x:Name="label1_Copy4" Content="Internal Number" HorizontalAlignment="Right" Margin="0,164,886,0" VerticalAlignment="Top" Foreground="#FF727272"/>
                             <TextBlock x:Name="docViewDocNumber" HorizontalAlignment="Left" Margin="112,14,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top"/>
                             <TextBlock x:Name="textBlock_Copy" HorizontalAlignment="Left" Margin="117,14,0,0" TextWrapping="Wrap" VerticalAlignment="Top"/>
-                            <TextBlock x:Name="textBlock_Copy1" HorizontalAlignment="Left" Margin="112,45,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top"/>
-                            <TextBlock x:Name="textBlock_Copy2" HorizontalAlignment="Left" Margin="112,76,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top"/>
-                            <TextBlock x:Name="textBlock_Copy3" HorizontalAlignment="Left" Margin="112,107,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top"/>
-                            <TextBlock x:Name="textBlock_Copy4" HorizontalAlignment="Left" Margin="112,138,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top"/>
-                            <TextBlock x:Name="textBlock_Copy5" HorizontalAlignment="Left" Margin="112,169,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top"/>
+                            <TextBlock x:Name="docViewTitle" HorizontalAlignment="Left" Margin="112,45,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top"/>
+                            <TextBlock x:Name="docViewType" HorizontalAlignment="Left" Margin="112,76,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top"/>
+                            <TextBlock x:Name="docViewStatus" HorizontalAlignment="Left" Margin="112,107,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top"/>
+                            <TextBlock x:Name="docViewDiscipline" HorizontalAlignment="Left" Margin="112,138,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top"/>
+                            <TextBlock x:Name="docViewIntNumber" HorizontalAlignment="Left" Margin="112,169,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top"/>
                             <Label x:Name="label1_Copy5" Content="Revision" HorizontalAlignment="Right" Margin="0,9,394,0" VerticalAlignment="Top" Foreground="#FF727272"/>
                             <Label x:Name="label1_Copy6" Content="Revision Date" HorizontalAlignment="Right" Margin="0,40,394,0" VerticalAlignment="Top" Foreground="#FF727272"/>
                             <Label x:Name="label1_Copy7" Content="Version" HorizontalAlignment="Right" Margin="0,71,394,0" VerticalAlignment="Top" Foreground="#FF727272"/>
                             <Label x:Name="label1_Copy8" Content="Registered" HorizontalAlignment="Right" Margin="0,102,394,0" VerticalAlignment="Top" Foreground="#FF727272"/>
                             <Label x:Name="label1_Copy9" Content="Registered By" HorizontalAlignment="Right" Margin="0,133,394,0" VerticalAlignment="Top" Foreground="#FF727272"/>
                             <Label x:Name="label1_Copy10" Content="Organization" HorizontalAlignment="Right" Margin="0,164,394,0" VerticalAlignment="Top" Foreground="#FF727272"/>
-                            <TextBlock x:Name="textBlock_Copy6" HorizontalAlignment="Left" Margin="603,14,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top"/>
-                            <TextBlock x:Name="textBlock_Copy7" HorizontalAlignment="Left" Margin="603,45,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top"/>
-                            <TextBlock x:Name="textBlock_Copy8" HorizontalAlignment="Left" Margin="603,76,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top"/>
-                            <TextBlock x:Name="textBlock_Copy9" HorizontalAlignment="Left" Margin="603,107,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top"/>
-                            <TextBlock x:Name="textBlock_Copy10" HorizontalAlignment="Left" Margin="603,138,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top"/>
-                            <TextBlock x:Name="textBlock_Copy11" HorizontalAlignment="Left" Margin="603,169,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top"/>
+                            <TextBlock x:Name="docViewRevision" HorizontalAlignment="Left" Margin="603,14,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top"/>
+                            <TextBlock x:Name="docViewRevisionDate" HorizontalAlignment="Left" Margin="603,45,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top"/>
+                            <TextBlock x:Name="docViewVersion" HorizontalAlignment="Left" Margin="603,76,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top"/>
+                            <TextBlock x:Name="docViewRegistered" HorizontalAlignment="Left" Margin="603,107,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top"/>
+                            <TextBlock x:Name="docViewRegisteredBy" HorizontalAlignment="Left" Margin="603,138,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top"/>
+                            <TextBlock x:Name="docViewOrganization" HorizontalAlignment="Left" Margin="603,169,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top"/>
+                            <TextBlock x:Name="docViewCurrent" HorizontalAlignment="Left" Margin="667,76,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top"/>
                         </Grid>
                     </GroupBox>
-                    <GroupBox x:Name="groupBox_Copy" Header="GroupBox" Margin="10,237,10,180"/>
-                    <DataGrid x:Name="dataGrid" Margin="10,0,10,10" Height="165" VerticalAlignment="Bottom"/>
+                    <GroupBox x:Name="groupBox_Copy" Header="Note" Margin="10,237,10,180">
+                        <TextBlock x:Name="docViewNote" TextWrapping="Wrap" Text="TextBlock" />
+                    </GroupBox>
+                    <DataGrid x:Name="fileManagerDataGridView" Margin="10,0,10,10" Height="165" VerticalAlignment="Bottom">
+                        <DataGrid.Columns>
+                            <DataGridCheckBoxColumn Binding="{Binding FileName}" ClipboardContentBinding="{x:Null}" Header="File Name"/>
+                            <DataGridCheckBoxColumn Binding="{Binding FileHumanSize}" ClipboardContentBinding="{x:Null}" Header="File Size"/>
+                            <DataGridCheckBoxColumn Binding="{Binding open_location}" ClipboardContentBinding="{x:Null}" Header="#" CanUserResize="False" Width="40"/>
+                        </DataGrid.Columns>
+                    </DataGrid>
                 </Grid>
             </TabItem>
-            <TabItem Header="Review Detail"/>
+            <TabItem Header="Review Detail">
+                <Grid Background="#FFE5E5E5">
+                    <Label x:Name="label1_Copy11" Content="Review Outcome" HorizontalAlignment="Right" Margin="0,11,913,0" VerticalAlignment="Top" Foreground="#FF727272"/>
+                    <TextBlock x:Name="docViewReviewStatus" HorizontalAlignment="Left" Margin="117,16,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top"/>
+                    <DataGrid x:Name="reviewDataGridView" HorizontalAlignment="Left" Margin="10,42,0,0" VerticalAlignment="Top" Height="296" Width="1005"/>
+                    <DataGrid x:Name="reviewFileDataGrid" Margin="10,0,10,10" Height="165" VerticalAlignment="Bottom">
+                        <DataGrid.Columns>
+                            <DataGridCheckBoxColumn Binding="{Binding FileName}" ClipboardContentBinding="{x:Null}" Header="File Name"/>
+                            <DataGridCheckBoxColumn Binding="{Binding FileHumanSize}" ClipboardContentBinding="{x:Null}" Header="File Size"/>
+                            <DataGridCheckBoxColumn Binding="{Binding open_location}" ClipboardContentBinding="{x:Null}" Header="#" CanUserResize="False" Width="40"/>
+                        </DataGrid.Columns>
+                    </DataGrid>
+                </Grid>
+            </TabItem>
             <TabItem Header="Picture Viewer"/>
         </TabControl>
         <Menu x:Name="menu" VerticalAlignment="Top" Height="26">
